shop-main/k8s/13-scratch-demployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scratch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scratch
  template:
    metadata:
      labels:
        app: scratch
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: scratch

      containers:
        - name: scratch
          image: nginx:1.27-alpine
          volumeMounts:
            - name: data
              mountPath: /data
