shop-main/k8s/21-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 4
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
        - name: conf
          configMap:
            name: web-config
      containers:
        - name: web
          image: nginx:1.27-alpine
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 128Mi

          volumeMounts:
            - name: conf
              mountPath: /etc/nginx/conf.d
          ports:
            - containerPort: 80
