shop-main/k8s/tmp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: probe-pod
spec:
  containers:
    - name: web
      image: nginx:1.27-alpine
