shop-main/k8s/41-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  clusterIP: None # headless: без спільної адреси
  selector:
    app: db
  ports:
    - port: 5432
